--- a/dot/tmux/.tmux.conf
+++ b/dot/tmux/.tmux.conf
@@ -17,6 +17,12 @@ set -g mouse-select-window on
 #scroll history
 set -g history-limit 30000
 
+# resize pane
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
+
 # ajoute les comportements de vim
 bind h select-pane -L
 bind j select-pane -D
@@ -47,11 +53,6 @@ bind C-a send-prefix
 #bind | split-window -h
 #bind - split-window -v
 
-# resize pane
-bind H resize-pane -L 3
-bind J resize-pane -D 3
-bind K resize-pane -U 3
-bind L resize-pane -R 3
 
 # pane border color
 #set -g pane-border-fg green
@@ -94,4 +95,25 @@ set -g status-interval 60
 set-window-option -g window-status-current-bg blue
 
 bind C-j split-window -v
+
+# List of plugins
+# Supports `github_username/repo` or full git URLs
+set -g @tpm_plugins "              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+"
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+
+set -g @tpm_plugins "           \
+  tmux-plugins/tpm              \
+  tmux-plugins/tmux-resurrect   \
+"
+
+# initializes TMUX plugin manager
+run-shell ~/.tmux/plugins/tpm/tpm
+
+set -g @resurrect-processes ':all:'
 
